--- a/WellTask_Frontend/package.json
+++ b/WellTask_Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.13",
     "classnames": "^2.5.1",
     "final-form": "^5.0.0",
@@ -17,6 +18,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-final-form": "^7.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
