--- a/WellTask_Frontend/package.json
+++ b/WellTask_Frontend/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^19.1.1",
     "react-final-form": "^7.0.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
