--- a/WellTask_Frontend/tsconfig.app.json
+++ b/WellTask_Frontend/tsconfig.app.json
@@ -25,7 +25,7 @@
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    "types": ["vite/client", "vitest/globals", "@testing-library/jest-dom"]
+    "types": ["vite/client", "vitest/globals", "@testing-library/jest-dom","node"]
   },
   "include": ["src"]
 }
